# OpenHarmony-car

./: .gitignore  README.md
源代码/实验2-1 点亮LED/: BUILD.gn  led_demo.c
源代码/实验2-2 按键控制LED/: BUILD.gn  led_set_demo.c
源代码/实验3 使用按键控制LED亮灭/: BUILD.gn  adc_led.c
源代码/实验4 OLED屏幕显示学号姓名/: BUILD.gn  gif2imgs.py  img2code.py
源代码/实验4 OLED屏幕显示学号姓名/examples/: BUILD.gn  ssd1306_demo.c  ssd1306_tests.c  ssd1306_tests.h
源代码/实验5-1 PWM实现LED呼吸灯/: BUILD.gn  demo_pwm.c
源代码/实验5-2 开发板连接WiFi热点并在OLED显示/: BUILD.gn  demo_wifi_display.c  ssd1306.c  ssd1306_oled.c  ssd1306_oled.h
源代码/实验6 开发板和电脑通过MQTT代理互发消息/: BUILD.gn  mqtt_entry.c  mqtt_test.c  mqtt_test.h
源代码/智能小车/: BUILD.gn  README.md  car_tcp_server_test.c  net_common.h  net_demo.h  net_params.h  robot_control.c  robot_control.h  robot_hcsr04.c  robot_l9110s.c  ssd1306_test.c  trace_model.c  wifi_connecter.c  wifi_connecter.h
源代码/智能小车/前端/前端/: windows_car_controller.py
