static_library("demo_pwm") {
    sources = [
        "demo_pwm.c"
    ]

    include_dirs = [
        "//device/hisilicon/hispark_pegasus/sdk_liteos/app/demo/include",
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/hals/communication/wifi_lite/wifiservice",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
    ]
}
